# OpenGL-scene

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
src/: cannon.cpp  cannon.h  castle.cpp  castle.h  donut.cpp  donut.h  main.cpp  main.h  robot.cpp  robot.h  spaceship.cpp  spaceship.h  sweepSurfaces.cpp  sweepSurfaces.h  trampoline.cpp  trampoline.h
textures/: roof.tga  wall.tga
